# QueryBuilder-2.0

Backend/: .env.example  .gitignore  chatbot.py  database_schema.json  endpoint_chatbot.py  main.py  makefile  open-ai-agents.ipynb  postgress.py  pyproject.toml  requirements.txt  streamlit_app.py  streamlit_chatbot.py
Backend/RAGSamples/: index.pkl
Backend/parser/: 12Disease_Vocabulary_202405141755.csv  12GVS_Variations_old.csv  Disease_Vocabulary_202405141755.csv  GVS_Variations.csv  Gv_variation.py  Gvhandler.py  Valuehandler.py  filter.py  filter_util.py  parser.py  parser_util.py  query.py  query_util.py  terminology_set (1).csv  variation_output.csv
Backend/parser/regex/: patterns.py
Backend/parser/utils/: constants.py  format.py  keywords.py
Frontend/my-react-app/: package-lock.json  package.json
Frontend/my-react-app/src/: App.css  index.css
Frontend/my-react-app/src/components/: Filters.jsx  blockRenderer.jsx  chatpage.jsx
Frontend/src/: App.jsx
