[project]
name = "open-ai-agents-text-2-sql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.14",
    "aiosignal==1.3.2",
    "altair==5.5.0",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "asttokens==3.0.0",
    "async-timeout==4.0.3",
    "asynch==0.2.5",
    "attrs==25.3.0",
    "blinker==1.9.0",
    "cachetools==5.5.2",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "ciso8601==2.3.2",
    "click==8.1.8",
    "clickhouse-connect==0.8.15",
    "clickhouse-driver==0.2.9",
    "clickhouse-sqlalchemy==0.3.2",
    "colorama==0.4.6",
    "comm==0.2.2",
    "dataclasses-json==0.6.7",
    "debugpy==1.8.13",
    "decorator==5.2.1",
    "distro==1.9.0",
    "dotenv==0.9.9",
    "exceptiongroup==1.2.2",
    "executing==2.2.0",
    "faiss-cpu==1.10.0",
    "frozenlist==1.5.0",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "graphviz==0.20.3",
    "greenlet==3.1.1",
    "griffe==1.7.2",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "httpx-sse==0.4.0",
    "idna==3.10",
    "infi-clickhouse-orm==2.1.3",
    "ipykernel==6.29.5",
    "ipython==8.34.0",
    "iso8601==2.1.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jiter==0.9.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "langchain==0.3.21",
    "langchain-community==0.3.20",
    "langchain-core==0.3.47",
    "langchain-openai==0.3.9",
    "langchain-text-splitters==0.3.7",
    "langsmith==0.3.18",
    "leb128==1.0.8",
    "lz4==4.4.3",
    "markupsafe==3.0.2",
    "marshmallow==3.26.1",
    "matplotlib-inline==0.1.7",
    "mcp==1.6.0",
    "multidict==6.2.0",
    "mypy-extensions==1.0.0",
    "narwhals==1.32.0",
    "nest-asyncio==1.6.0",
    "numpy==2.2.4",
    "openai==1.72.0",
    "openai-agents==0.0.9",
    "orjson==3.10.15",
    "packaging==24.2",
    "pandas==2.2.3",
    "parso==0.8.4",
    "pillow==11.1.0",
    "platformdirs==4.3.7",
    "prompt-toolkit==3.0.50",
    "propcache==0.3.0",
    "protobuf==5.29.4",
    "psutil==7.0.0",
    "pure-eval==0.2.3",
    "pyarrow==19.0.1",
    "pydantic==2.11.3",
    "pydantic-core==2.33.1",
    "pydantic-settings==2.8.1",
    "pydeck==0.9.1",
    "pygments==2.19.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "pytz==2025.1",
    "pywin32==310",
    "pyyaml==6.0.2",
    "pyzmq==26.3.0",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "rpds-py==0.23.1",
    "setuptools==77.0.3",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.39",
    "sqlalchemy-clickhouse==0.1.5.post0",
    "sse-starlette==2.2.1",
    "stack-data==0.6.3",
    "starlette==0.46.1",
    "streamlit==1.43.2",
    "tenacity==9.0.0",
    "tiktoken==0.9.0",
    "toml==0.10.2",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "types-requests==2.32.0.20250328",
    "typing-extensions==4.13.1",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.0",
    "tzdata==2025.2",
    "tzlocal==5.3.1",
    "urllib3==2.3.0",
    "uvicorn==0.34.0",
    "watchdog==6.0.0",
    "wcwidth==0.2.13",
    "yarl==1.18.3",
    "zstandard==0.23.0",
    "zstd==1.5.6.6",
]
